--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,15 +1,20 @@
 name: Feishu daily update and send message # 工作流名称
  
 on: # 触发工作流的条件
-  push:  # 推送时触发
-    branches: # branch分支筛选器
-      - main  # 名为main的分支
+  # push:  # 推送时触发
+  #   branches: # branch分支筛选器
+  #     - main  # 名为main的分支
   schedule: # 工作流的计划时间 （UTC0 为标准 UTC8要加8个小时）
     - cron: '0 1 * * *'  # cron语法
  
 jobs: # 执行的工作
   run_demo_actions: # job_id(需要运行的作业)
     runs-on: ubuntu-latest # 运行作业的计算机类型，在最新版本的 Ubuntu 操作系统环境下运行
+    
+    concurrency: # 添加唯一触发控制，确保每次只执行一次
+      group: feishu_daily_update
+      cancel-in-progress: true
+      
     steps: # 要执行的任务步骤
       - name: Checkout code 
         uses: actions/checkout@v3  # 用于将github代码仓库的代码拷贝到工作目录中
