--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,40 +1,48 @@
 name: Feishu daily update and send message # 工作流名称
- 
+
 on: # 触发工作流的条件
-  push:  # 推送时触发
+  push: # 推送时触发
     branches: # branch分支筛选器
-      - main  # 名为main的分支
+      - main # 名为main的分支
   schedule: # 工作流的计划时间 （UTC0 为标准 UTC8要加8个小时）
-    - cron: '0 6 * * 2-6'  # cron语法
- 
+    - cron: "0 6 * * 1-5" # cron语法
+
 jobs: # 执行的工作
   run_demo_actions: # job_id(需要运行的作业)
     runs-on: ubuntu-latest # 运行作业的计算机类型，在最新版本的 Ubuntu 操作系统环境下运行
-    
+
     # concurrency: # 添加唯一触发控制，确保每次只执行一次
     #   group: feishu_daily_update
     #   cancel-in-progress: true
-      
+
     steps: # 要执行的任务步骤
-      - name: Checkout code 
-        uses: actions/checkout@v3  # 用于将github代码仓库的代码拷贝到工作目录中
- 
+      - name: Checkout code
+        uses: actions/checkout@v3 # 用于将github代码仓库的代码拷贝到工作目录中
+
       - name: Set up Python
         uses: actions/setup-python@v2 # 用于设置 Python 环境，它允许你指定要在工作环境中使用的 Python 版本
         with: # 输入参数被设置为环境变量
-          python-version: '3.9'  # 选择要用的Python版本
- 
+          python-version: "3.9" # 选择要用的Python版本
+
       - name: Install requirements.txt
-        run: | # shell命令行运行（每个run代表一个新的进程和shell） | 可以用来多行输入
-          pip install -r ./requirements.txt 
- 
-      - name: Run update_feishu_weekend.py on Tuesday
-        if: ${{ github.event.schedule == '0 6 * * 2' }} # 如果是周二
-        run: python update_feishu_weekend.py
-  
-      - name: Run update_feishu_weekday.py on Wednesday to Saturday
-        if: ${{ github.event.schedule != '0 6 * * 2' }} # 如果是周三到周六
-        run: python update_feishu_weekday.py
+        run:
+          | # shell命令行运行（每个run代表一个新的进程和shell） | 可以用来多行输入
+          pip install -r ./requirements.txt
+
+      - name: Debug DAY_OF_WEEK
+        run: |
+          DAY_OF_WEEK=$(date -u +'%u')  # 获取当前的星期数
+          echo "Today is day number: $DAY_OF_WEEK"  # 输出星期几，用于调试
+
+      - name: Check the day of the week and run appropriate script
+        run: |
+          DAY_OF_WEEK=$(date -u +'%u')
+          if [ "$DAY_OF_WEEK" -eq 1 ]; then  # 判断是否是周一
+            echo "Running weekend script (Monday)"
+            python update_feishu_weekend.py
+          else
+            echo "Running weekday script (Tuesday to Friday)"
+            python update_feishu_weekday.py
     env:
       # 设置敏感信息的环境变量
       APP_ID: ${{ secrets.APP_ID }}
